--- a/Sherry时钟.html
+++ b/Sherry时钟.html
@@ -19,6 +19,7 @@
 	<div id="box">
 		<canvas id="cvs" width="420" height="420"></canvas>
 	</div>
+	<div class="sharethis-inline-share-buttons"></div>
 	<script>
 		var cvs=document.getElementById('cvs');
 		var ctx=cvs.getContext("2d");
@@ -153,5 +154,6 @@
 		clock();
 		setInterval(clock,1000);
 	</script>
+	<script src="http:///platform-api.sharethis.com/js/sharethis.js#property=5bc54d47ddd6040011604957&product=inline-share-buttons"></script>
 </body>
 </html>
