--- a/Sherry时钟.html
+++ b/Sherry时钟.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Sherry</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<meta name="keywords" content="ginlovesherry">
+	<meta name="description" content="sherrylovegin">
 	<style>
 		#box{
 			width: 420px;
