--- a/Sherry.html
+++ b/Sherry.html
@@ -154,6 +154,6 @@
 		clock();
 		setInterval(clock,1000);
 	</script>
-	<script src="https:///platform-api.sharethis.com/js/sharethis.js#property=5bc54d47ddd6040011604957&product=inline-share-buttons"></script>
+	<script src="https://platform-api.sharethis.com/js/sharethis.js#property=5bc54d47ddd6040011604957&product=inline-share-buttons"></script>
 </body>
 </html>
