--- a/Sherry.html
+++ b/Sherry.html
@@ -20,6 +20,7 @@
 		<canvas id="cvs" width="420" height="420"></canvas>
 	</div>
 	<div class="sharethis-inline-share-buttons"></div>
+	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>
 	<script>
 		var cvs=document.getElementById('cvs');
 		var ctx=cvs.getContext("2d");
@@ -154,6 +155,5 @@
 		clock();
 		//setInterval(clock,1000);
 	</script>
-	<script src="https://platform-api.sharethis.com/js/sharethis.js#property=5bc54d47ddd6040011604957&product=inline-share-buttons"></script>
 </body>
 </html>
