--- a/Sherry.html
+++ b/Sherry.html
@@ -14,7 +14,7 @@
 			margin: 88px auto;
 		}
 	</style>
-	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>
+	<script src="https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons"></script>
 </head>
 <body>
 	<div id="box">
