--- a/Sherry.html
+++ b/Sherry.html
@@ -158,7 +158,7 @@
 	<!-- ivideoplaylist plugin -->
 	<div id="ivideoplaylist-id">
 		<noscript>
-			<iframe src="//www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+			<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0"></iframe>
 		</noscript>
 		<script>
 		(function(w, d, s, l, i, wi) {
@@ -189,7 +189,7 @@
 
 			j.async = true;
 
-			j.src = "//www.googletagmanager.com/gtm.js?id=" + i + dl;
+			j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
 
 			f.parentNode.insertBefore(j, f);
 
