--- a/Sherry.html
+++ b/Sherry.html
@@ -14,13 +14,13 @@
 			margin: 88px auto;
 		}
 	</style>
-	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>
+	<!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>-->
 </head>
 <body>
 	<div id="box">
 		<canvas id="cvs" width="420" height="420"></canvas>
 	</div>
-	<div class="sharethis-inline-share-buttons"></div>
+	<!--<div class="sharethis-inline-share-buttons"></div>-->
 	<script>
 		var cvs=document.getElementById('cvs');
 		var ctx=cvs.getContext("2d");
