--- a/Sherry.html
+++ b/Sherry.html
@@ -157,9 +157,10 @@
 	</script>
 	<!-- ivideoplaylist plugin -->
 	<div id="ivideoplaylist-id">
-		<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0"></iframe>
+		<!--<noscript>
 			<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0"></iframe>
-		</noscript>
+		</noscript>-->
 		<script>
 		(function(w, d, s, l, i, wi) {
 
