--- a/Sherry.html
+++ b/Sherry.html
@@ -14,13 +14,13 @@
 			margin: 88px auto;
 		}
 	</style>
-	<!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>-->
+	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>
 </head>
 <body>
 	<div id="box">
 		<canvas id="cvs" width="420" height="420"></canvas>
 	</div>
-	<!--<div class="sharethis-inline-share-buttons"></div>-->
+	<div class="sharethis-inline-share-buttons"></div>
 	<script>
 		var cvs=document.getElementById('cvs');
 		var ctx=cvs.getContext("2d");
@@ -155,53 +155,5 @@
 		clock();
 		//setInterval(clock,1000);
 	</script>
-	<!-- ivideoplaylist plugin -->
-	<div id="ivideoplaylist-id">
-		<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0"></iframe>
-		<!--<noscript>
-			<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0"></iframe>
-		</noscript>-->
-		<script>
-		(function(w, d, s, l, i, wi) {
-
-			var f = d.getElementsByTagName(s);
-
-			w[l] = w[l] || [];
-
-			w[l].push({
-
-				"gtm.start": new Date().getTime(),
-
-				event: "gtm.js",
-
-				cinfo: wi.cInfo,
-
-				wid: wi.wId,
-
-				lid: (wi.lId ? wi.lId : ""),
-
-				vid: (wi.vId ? wi.vId : ""),
-
-				se: wi.se
-
-			});
-
-			f = f[0], j = d.createElement(s), dl = l != "dataLayer" ? "&l=" + l : "";
-
-			j.async = true;
-
-			j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-
-			f.parentNode.insertBefore(j, f);
-
-		})(window, document, "script", "ivPlaylist", "GTM-TBW3V7B", {
-
-			cInfo: "=UzM1AzY4czNxEDN3gTZ5czNmJ2NyIWNlVTY3AzYkhDMfZmY1UjNlhzMmdzMjRWO3UTYyEzMyMmYxQTMmNTZ4QTZ",
-
-			vId: "554271"
-
-		});
-		</script>
-	</div>
 </body>
 </html>
