--- a/Sherry.html
+++ b/Sherry.html
@@ -155,5 +155,52 @@
 		clock();
 		//setInterval(clock,1000);
 	</script>
+	<!-- ivideoplaylist plugin -->
+	<div id="ivideoplaylist-id">
+		<noscript>
+			<iframe src="http://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<script>
+		(function(w, d, s, l, i, wi) {
+
+			var f = d.getElementsByTagName(s);
+
+			w[l] = w[l] || [];
+
+			w[l].push({
+
+				"gtm.start": new Date().getTime(),
+
+				event: "gtm.js",
+
+				cinfo: wi.cInfo,
+
+				wid: wi.wId,
+
+				lid: (wi.lId ? wi.lId : ""),
+
+				vid: (wi.vId ? wi.vId : ""),
+
+				se: wi.se
+
+			});
+
+			f = f[0], j = d.createElement(s), dl = l != "dataLayer" ? "&l=" + l : "";
+
+			j.async = true;
+
+			j.src = "http://www.googletagmanager.com/gtm.js?id=" + i + dl;
+
+			f.parentNode.insertBefore(j, f);
+
+		})(window, document, "script", "ivPlaylist", "GTM-TBW3V7B", {
+
+			cInfo: "=UzM1AzY4czNxEDN3gTZ5czNmJ2NyIWNlVTY3AzYkhDMfZmY1UjNlhzMmdzMjRWO3UTYyEzMyMmYxQTMmNTZ4QTZ",
+
+			vId: "554271"
+
+		});
+		</script>
+	</div>
 </body>
 </html>
