--- a/share.html
+++ b/share.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>星洲网新闻</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
+	<meta name="keywords" content="星洲网新闻的keywords星洲网新闻的keywords星洲网新闻的keywords">
+	<meta name="description" content="星洲网新闻的description星洲网新闻的description星洲网新闻的description">
 	<style>
 		*{
 			margin: 0;
