--- a/share.html
+++ b/share.html
@@ -72,6 +72,6 @@
 			</div>
 		</div>
 	</div>
-	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script>
+	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons'></script>
 </body>
 </html>
