--- a/DoubleClick.html
+++ b/DoubleClick.html
@@ -7,12 +7,20 @@
 	<meta name="description" content="DoubleClick">
 </head>
 <body>
-	<ins class='dcmads'
+	<!-- <ins class='dcmads'
 	 style='display:inline-block;width:300px;height:250px'
 	 data-dcm-placement='N7480.1664088DOUBLECLICK.NETTEST/B8299600.114131924'
 	 data-dcm-rendering-mode='script'
 	 data-dcm-click-tracker='${CLICK_URL}'>
 	 <script src='https://www.googletagservices.com/dcm/dcmads.js'></script>
+	</ins> -->
+	<ins data-dcm-click-tracker='%%CLICK_URL_UNESC%%' class='dcmads' style='display:inline-block;width:320px;height:50px'
+	    data-dcm-placement='N194401.2183701SINCHEWMY/B21682665.229902673'
+	    data-dcm-rendering-mode='script'
+	    data-dcm-https-only
+	    data-dcm-resettable-device-id=''
+	    data-dcm-app-id=''>
+	  <script src='https://www.googletagservices.com/dcm/dcmads.js'></script>
 	</ins>
 </body>
 </html>
