--- a/DoubleClick.html
+++ b/DoubleClick.html
@@ -1,54 +1,28 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>DoubleClick</title>
 	<meta name="keywords" content="DoubleClick">
 	<meta name="description" content="DoubleClick">
 </head>
+
 <body>
-	<ins class='dcmads'
-	 style='display:inline-block;width:300px;height:250px'
-	 data-dcm-placement='N7480.1664088DOUBLECLICK.NETTEST/B8299600.114131924'
-	 data-dcm-rendering-mode='script'
-	 data-dcm-click-tracker='${CLICK_URL}'>
-	 <script src='https://www.googletagservices.com/dcm/dcmads.js'></script>
-	</ins>
-	<ins data-dcm-click-tracker='%%CLICK_URL_UNESC%%' class='dcmads' style='display:inline-block;width:320px;height:50px'
-	    data-dcm-placement='N194401.2183701SINCHEWMY/B21682665.229902673'
-	    data-dcm-rendering-mode='script'
-	    data-dcm-https-only
-	    data-dcm-resettable-device-id=''
-	    data-dcm-app-id=''>
-	  <script src='https://www.googletagservices.com/dcm/dcmads.js'></script>
-	</ins>
-	<ins class='dcmads'
-	 style='display:inline-block;width:300px;height:250px'
-	 data-dcm-placement='N7480.1664088DOUBLECLICK.NETTEST/B8299600.114131924'
-	 data-dcm-param-custom_key='custom_value'
-	 data-dcm-rendering-mode='iframe'>
-	 <script src='https://www.googletagservices.com/dcm/dcmads.js'></script>
-	</ins>
-	<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
-	<script>
-	  var googletag = googletag || {};
-	  googletag.cmd = googletag.cmd || [];
-	</script>
-
-	<script>
-	  googletag.cmd.push(function() {
-	    googletag.defineSlot('/2365395/Founder_Test', [1, 1], 'div-gpt-ad-1530265331270-0').addService(googletag.pubads());
-	    googletag.pubads().enableSingleRequest();
-	    googletag.enableServices();
-	  });
-	</script>
-
-
-	<!-- /2365395/Founder_Test -->
-	<div id='div-gpt-ad-1530265331270-0' style='height:1px; width:1px;'>
-	<script>
-	googletag.cmd.push(function() { googletag.display('div-gpt-ad-1530265331270-0'); });
-	</script>
-	</div> 
+	<footer>
+		<div class="row">
+			<div class="col-sm-12">
+				<div style="text-align: center;">
+					<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- demo测试页广告 -->
+					<ins class="adsbygoogle" style="display: inline-block; min-width: 300px; max-width: 970px; width: 970px; height: 90px;" data-ad-client="ca-pub-5751451760833794" data-ad-slot="6979016065" data-adsbygoogle-status="done"><ins id="aswift_0_expand" style="display:inline-table;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:970px;background-color:transparent;"><ins id="aswift_0_anchor" style="display:block;border:none;height:90px;margin:0;padding:0;position:relative;visibility:visible;width:970px;background-color:transparent;"><iframe marginwidth="0" marginheight="0" vspace="0" hspace="0" allowtransparency="true" scrolling="no" allowfullscreen="true" onload="var i=this.id,s=window.google_iframe_oncopy,H=s&amp;&amp;s.handlers,h=H&amp;&amp;H[i],w=this.contentWindow,d;try{d=w.document}catch(e){}if(h&amp;&amp;d&amp;&amp;(!d.body||!d.body.firstChild)){if(h.call){setTimeout(h,0)}else if(h.match){try{h=s.upd(h,i)}catch(e){}w.location.replace(h)}}" id="aswift_0" name="aswift_0" style="left:0;position:absolute;top:0;width:970px;height:90px;" width="970" height="90" frameborder="0"></iframe></ins></ins></ins>
+					<script>
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
+
 </html>
