--- a/Sherry.html
+++ b/Sherry.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta property="og:image" content="https://appif.sinchew.com.my/resource/m-header-logo.png">
 	<title>Sherry</title>
 	<meta name="keywords" content="ginlovesherry">
 	<meta name="description" content="sherrylovegin">
@@ -14,6 +15,9 @@
 			margin: 88px auto;
 		}
 	</style>
+	<script>
+		// window.location.href = 'https://app.sinchew.com.my/amucsite//pad/index.html#/detail/1916450541/6824';
+	</script>
 	<!-- <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bc5b494b2b6bd00118b8c2a&product=inline-share-buttons' async='async'></script> -->
 </head>
 <body>
@@ -156,7 +160,7 @@
 		//setInterval(clock,1000);
 	</script> -->
 	<!-- ivideoplaylist plugin -->
-	<div id="ivideoplaylist-id">
+	<!-- <div id="ivideoplaylist-id">
 		<noscript>
 			<iframe src="https://www.googletagmanager.com/ns.html?id='GTM-TBW3V7B'" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 		</noscript>
@@ -200,6 +204,6 @@
 
 		});
 		</script>
-	</div>
+	</div> -->
 </body>
 </html>
